8293354: fastdebug build broken after JDK-8281866

Reviewed-by: yan